--- a/.github/workflows/ci_macos_windows.yml
+++ b/.github/workflows/ci_macos_windows.yml
@@ -5,11 +5,11 @@ on:
       - main
 
 jobs:
-  build:
+  build_all:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
-      runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
