--- a/.github/workflows/ci_macos_windows.yml
+++ b/.github/workflows/ci_macos_windows.yml
@@ -8,7 +8,7 @@ jobs:
   build_all:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ macos-latest, windows-latest ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
