--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,7 +9,10 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'maven-publish'
 }
+
+group = 'com.github.growthbook'
 
 repositories {
     // Use Maven Central for resolving dependencies.
