--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -12,6 +12,9 @@ plugins {
     id 'maven-publish'
 }
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 group = 'com.github.growthbook'
 
 repositories {
