add publishing block to build.gradle

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -34,6 +34,14 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
