refactor to use lombuk; add Experiment

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:31.0.1-jre'
+
+    // Adds getter, setter and builder boilerplate
+    // https://projectlombok.org/
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 publishing {
