--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -48,6 +48,14 @@ publishing {
     }
 }
 
+// Generates documentation in ./lib/build/docs/javadoc
+// Note: These docs are pretty useless for the Lombok stuff
+// TODO: Have doc comments for Lombuk-annotated classes get picked up by JavaDoc
+javadoc {
+    build {
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
