add test coverage reporting in html

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,6 +10,7 @@ plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     id 'maven-publish'
+    id 'jacoco'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -63,4 +64,19 @@ javadoc {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+test {
+    // Test run results are available at: ./lib/build/reports/tests/test/index.html
+    // Test coverage reports are available at: ./lib/build/jacocoHtml/index.html
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
