expose private members in javadoc

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -57,6 +57,8 @@ publishing {
 // Note: These docs are pretty useless for the Lombok stuff
 // TODO: Have doc comments for Lombuk-annotated classes get picked up by JavaDoc https://github.com/growthbook/growthbook-sdk-java/issues/4
 javadoc {
+    options.memberLevel = JavadocMemberLevel.PRIVATE
+
     build {
     }
 }
