add java version 19?

--- a/.github/workflows/java_versions.yml
+++ b/.github/workflows/java_versions.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ '8', '11', '16' ] # default is 17. See ci.yml
+        java: [ '8', '11', '16', '19' ] # default is 17. See ci.yml
     name: Java version ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v2
