--- a/.github/workflows/java_versions.yml
+++ b/.github/workflows/java_versions.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         java: [ '8', '11', '16', '19' ] # default is 17. See ci.yml
     name: Java version ${{ matrix.java }}
