add javadoc jar

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -53,6 +53,11 @@ publishing {
     }
 }
 
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
 // Generates documentation in ./lib/build/docs/javadoc
 javadoc {
     options.memberLevel = JavadocMemberLevel.PUBLIC
