--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,10 +29,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.mockito:mockito-core:4.8.0'
 
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.google.guava:guava:31.0.1-jre'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
