--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,12 +5,23 @@
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
  * User Manual available at https://docs.gradle.org/7.5.1/userguide/building_java_projects.html
  */
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-errorprone-plugin:3.1.0"
+    }
+}
 
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     id 'maven-publish'
     id 'jacoco'
+    id 'net.ltgt.errorprone' version '3.1.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -25,28 +36,28 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:24.0.0'
+    implementation 'org.jetbrains:annotations:24.1.0'
 
     // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'org.mockito:mockito-core:4.8.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0-M1'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
-    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation 'com.google.guava:guava:33.2.0-jre'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.google.code.gson:gson:2.10'
 
     // https://square.github.io/okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp-sse
     implementation 'com.squareup.okhttp3:okhttp-sse:4.11.0'
-
     // Adds getter, setter and builder boilerplate
     // https://projectlombok.org/
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    errorprone 'com.google.errorprone:error_prone_core:2.26.1'
 }
 
 publishing {
@@ -94,4 +105,10 @@ jacocoTestReport {
         csv.required = false
         html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.errorprone.disableWarningsInGeneratedCode = true
+    options.errorprone.allErrorsAsWarnings = true
+    options.errorprone.disable("MissingSummary")
 }
