--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -6,11 +6,18 @@
  * User Manual available at https://docs.gradle.org/7.5.1/userguide/building_java_projects.html
  */
 
+buildscript {
+    dependencies {
+        classpath "io.freefair.gradle:lombok-plugin:8.6"
+    }
+}
+
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     id 'maven-publish'
     id 'jacoco'
+    id "io.freefair.lombok" version "8.6"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
