--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 
     // logging
     implementation 'org.slf4j:slf4j-api:2.0.7'
+
+    implementation 'cloud.prefab:sse-handler:1.0.0'
 }
 
 publishing {
