--- a/.github/workflows/java_versions.yml
+++ b/.github/workflows/java_versions.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '8', '11', '16' ] # default is 17. See ci.yml
+        java: [ '11', '16' ] # default is 17. See ci.yml
     name: Java version ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v2
