--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,8 +25,8 @@ plugins {
     id "io.freefair.lombok" version "8.6"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 group = 'com.github.growthbook'
 version = 'main-SNAPSHOT'
