--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,17 +9,9 @@
             "snapshot-label": "SNAPSHOT",
             "versioning": "default",
             "extra-files": [
-                {
-                    "type": "json",
-                    "path": "gradle.properties",
-                    "jsonpath": "$.version"
-                },
-                {
-                    "type": "regex",
-                    "path": "lib/src/main/java/growthbook/sdk/java/Version.java",
-                    "search": "public static final String SDK_VERSION = \"(?<version>[0-9]+\\.[0-9]+\\.[0-9]+)\"",
-                    "replace": "public static final String SDK_VERSION = \"$${version}\""
-                }
+                "gradle.properties",
+                "versions.txt",
+                "lib/src/main/java/growthbook/sdk/java/Version.java"
             ]
         }
     },
